# Quizpy

./: README.md  pyproject.toml  temp.json
src/quizr/: __init__.py  quiz.json
src/quizr/templates/: admin.html  index.html  test.html
